# RPi-Simulator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.kiro/hooks/: python-dev-workflow.kiro.hook
.kiro/specs/complex-system/: workflow_state.json
.kiro/specs/complex-system/complex-system/: requirements.md
.kiro/specs/error-prone-feature/error-prone-feature/: tasks.md
.kiro/specs/kiro-integration-test/kiro-integration-test/: design.md
.kiro/specs/structured-feature-planning/: design.md  requirements.md  tasks.md
.kiro/specs/test-execution-feature/: execution_state.json  progression_state.json  tracking_state.json  validation_history.json
.kiro/steering/: product.md  structure.md  tech.md
apps/desktop/: __main__.py  breadboard_widget.py  console_widget.py  device_panel.py  environment_widget.py  logic_analyzer_widget.py  main_window.py  pin_inspector.py  project_wizard.py
docs/: INSTALLATION.md
examples/advanced_iot_station/: main.py  pistudio.json
examples/blink_led/: main.py  pistudio.json
examples/i2c_bme280_logger/: main.py  pistudio.json
examples/iot_cloud_dashboard/: main.py  pistudio.json
test-project/: pistudio.json
test-project/src/: main.py  simple_test.py
tests/: test_blink_led.py  test_design_generator.py  test_ears_engine.py  test_end_to_end_integration.py  test_kiro_integration.py  test_requirements_validator.py  test_spec_manager.py  test_task_execution_framework.py  test_task_planner.py  test_workflow_controller.py
